// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconSidebarLeft should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-sidebar-left "
  height={18}
  viewBox="0 0 18 18"
  width={18}
>
  <path
    className="fill-color"
    d="M5 6H3V4h2v2zm0 3H3V7h2v2z"
    fill="#222"
  />
  <path
    className="fill-color"
    d="M0 3v12c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2H2C.9 1 0 1.9 0 3zm8 12V3h8v12H8zm-2 0H2V3h4v12z"
    fill="#222"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconSidebarLeft should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-sidebar-left test"
  height={100}
  title="title"
  viewBox="0 0 18 18"
  width={200}
>
  <path
    className="fill-color"
    d="M5 6H3V4h2v2zm0 3H3V7h2v2z"
    fill="#222"
  />
  <path
    className="fill-color"
    d="M0 3v12c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V3c0-1.1-.9-2-2-2H2C.9 1 0 1.9 0 3zm8 12V3h8v12H8zm-2 0H2V3h4v12z"
    fill="#222"
  />
</AccessibleSVG>
`;
